# lead_intelligence

./: LICENSE  MANIFEST.in  README.md  api.py  hooks.py  pyproject.toml  requirements.txt  setup.py
api/: __init__.py  ai_assistant.py  integrations.py  lead_generation.py
doctype/company_profile/: __init__.py  company_profile.py
doctype/follow_up_template/: __init__.py
doctype/lead_campaign/: lead_campaign.json  lead_campaign.py
doctype/lead_intelligence_settings/: lead_intelligence_settings.py  test_lead_intelligence_settings.py
doctype/lead_intelligence_usage_stats/: lead_intelligence_usage_stats.json  test_lead_intelligence_usage_stats.py
doctype/outreach_template/: __init__.py  outreach_template.py
doctype/target_industry/: target_industry.py
lead_intelligence/: __init__.py  install.py  tasks.py  utils.py
lead_intelligence/api/: analytics.py  campaign_management.py
lead_intelligence/doctype/campaign_execution/: __init__.py  campaign_execution.json  campaign_execution.py
lead_intelligence/doctype/company_profile/: company_profile.json
lead_intelligence/doctype/follow_up_template/: follow_up_template.json  follow_up_template.py
lead_intelligence/doctype/lead_campaign/: __init__.py
lead_intelligence/doctype/lead_intelligence_settings/: lead_intelligence_settings.json
lead_intelligence/doctype/lead_intelligence_usage_stats/: lead_intelligence_usage_stats.py
lead_intelligence/doctype/outreach_template/: outreach_template.json
lead_intelligence/doctype/target_industry/: __init__.py  target_industry.json
lead_intelligence/public/js/: customer.js
public/css/: lead_intelligence.css
public/js/: contact.js  lead.js  lead_intelligence.js
templates/pages/: index.html
