[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lead_intelligence"
authors = [{name = "Your Organization", email = "support@yourorganization.com"}]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "frappe>=13.0.0",
    "erpnext>=13.0.0",
    "requests>=2.28.0",
    "google-api-python-client>=2.70.0",
    "google-auth>=2.15.0",
    "googlemaps>=4.7.3",
    "openai>=0.27.0",
    "sendgrid>=6.9.7",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "beautifulsoup4>=4.11.0",
    "redis>=4.3.0",
    "phonenumbers>=8.12.0",
    "python-dateutil>=2.8.0",
    "openpyxl>=3.0.0",
    "Pillow>=9.3.0",
    "cryptography>=38.0.0",
    "python-dotenv>=0.21.0",
    "pyyaml>=6.0",
    "geopy>=2.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "black>=22.10.0",
    "flake8>=5.0.0",
    "isort>=5.10.0",
    "mypy>=0.991"
]

[project.urls]
Homepage = "https://github.com/Shamlan321-pro/lead_intelligence"
Repository = "https://github.com/Shamlan321-pro/lead_intelligence.git"
Documentation = "https://github.com/Shamlan321-pro/lead_intelligence#readme"
"Bug Tracker" = "https://github.com/Shamlan321-pro/lead_intelligence/issues"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py"
]
python_classes = [
    "Test*"
]
python_functions = [
    "test_*"
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "frappe.*",
    "erpnext.*",
    "googlemaps.*",
    "openai.*",
    "sendgrid.*"
]
ignore_missing_imports = true